# sphinx-rglob-toctree

./: README.md  flake.nix  pyproject.toml
.github/workflows/: check.yml  release.yml  update-nix.yml
sphinx_rglob_toctree/: __init__.py  directive.py  generator.py  scanner.py
tests/: conftest.py  test_basic.py
tests/roots/test-basic/: conf.py  index.md
tests/roots/test-basic/plans/: index.md  overview.md
tests/roots/test-basic/plans/2026/02/28/: egg.md
tests/roots/test-basic/plans/2026/03/23/: ham.md
tests/roots/test-basic/plans/2026/03/24/: spam.md
