[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-rglob-toctree"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    "sphinx>=8.0",
]

[project.optional-dependencies]
dev = [
    "myst-parser>=4.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.rules]
possibly-unresolved-reference = "ignore"
