[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-rglob-toctree"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    "sphinx>=8.0",
]

[project.optional-dependencies]
dev = [
    "furo>=2025.12.19",
    "myst-parser>=4.0",
    "pytest>=9.0.3",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"__future__.annotations" = {msg = "Python 3.14+ uses PEP 649 for deferred evaluation of annotations. Do not use PEP 563."}

[tool.ty.rules]
possibly-unresolved-reference = "ignore"
